# hot_pulse

./: .env.example  .gitignore  README.md  _ov_transcribe.py  _resume_knowledge.py  _temp_check.py  _transcribe_v2.py  config.yaml  config.yaml.example  pyproject.toml  test_tikhub.py
.clawhub/: lock.json
.codegraph/: daemon.pid
openspec/: config.yaml
openspec/changes/knowledge-worker-obsidian/: proposal.md  tasks.md
openspec/changes/pipeline-executor/: design.md  proposal.md
openspec/changes/weixin-video-support/: design.md  proposal.md  tasks.md
openspec/specs/analyze-worker/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/dingtalk-push-worker/: spec.md
openspec/specs/douyin-monitor/: spec.md
openspec/specs/download-worker/: spec.md
openspec/specs/extract-audio-worker/: spec.md
openspec/specs/ingest-cli/: spec.md
openspec/specs/knowledge-worker-obsidian/: spec.md
openspec/specs/main-orchestrator/: spec.md
openspec/specs/openai-compatible-llm/: spec.md
openspec/specs/patrol-worker/: spec.md
openspec/specs/pipeline-executor/: spec.md
scripts/: patch_optimum_py314.py  test_gpu_whisper.py  test_openvino.py
skills/: hot-pulse-ingest.md
src/hot_pulse/: analyze_worker.py  config.py  dingtalk_worker.py  download_worker.py  extract_audio_worker.py  feishu.py  ingest.py  knowledge_worker.py  main.py  models.py  monitor.py  patrol_worker.py  pipeline.py  task.py  task_manager.py  tikhub.py  transcribe_worker.py  worker_base.py  zmq_client.py
tests/: test_patrol.py  test_pipeline.py  test_weixin.py
(+138 files in other folders)
